--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   }
